--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -30,5 +30,8 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - name: Compile TypeScript code
+      run: npm run build
+
     - name: Test documentation generation
       run: npm run docs:generate
