--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -1,6 +1,6 @@
 name: Generate documentation
 
-# Run this job on all pushes to master and pull requests
+# Run this workflow on all pushes to master and pull requests
 on:
   push:
     branches:
@@ -8,11 +8,15 @@ on:
   pull_request: {}
 
 jobs:
+  # This job checks if the docs can be generated and produce changes
   check:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [14.x]
+
+    outputs:
+      CHANGES: ${{ steps.changes.outputs.CHANGES }}
 
     steps:
     - name: Checkout code
@@ -35,3 +39,43 @@ jobs:
 
     - name: Test documentation generation
       run: npm run docs:generate
+
+    - name: Check for changes
+      id: changes
+      run: |
+        if [ -n "$(git status --porcelain)" ]; then
+          echo "::set-output name=CHANGES::true"
+        fi
+
+    - name: Save changed files for the update PR
+      if: ${{ steps.changes.outputs.CHANGES }}
+      uses: actions/upload-artifact@v2
+      with:
+        name: docs
+        path: docs
+
+  # ============================
+
+  # This job creates a PR which updates the docs
+  update:
+    # Trigger this step only when pushing to master and changes were detected
+    if: |
+      needs.check.outputs.CHANGES == 'true' &&
+      github.event_name == 'push' &&
+      github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    needs: [check]
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Download changed files from previous job
+      uses: actions/download-artifact@v2
+
+    - name: Create or update PR
+      uses: ./.github/actions/generateTypedDocs
+      with:
+        githubToken: ${{ secrets.GITHUB_TOKEN }}
+      env:
+        CI: true
