build: update and re-enable wotan linter

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@fimbul/mithotyn": "^0.21.0",
-    "@fimbul/wotan": "^0.21.1",
+    "@fimbul/wotan": "^0.22.0",
     "@types/fs-extra": "^9.0.1",
     "@types/gulp": "^4.0.7",
     "@types/gulp-sourcemaps": "0.0.32",
@@ -102,7 +102,7 @@
     "show-coverage": "npm run coverage && start ./coverage/index.html",
     "lint:ts": "eslint --ext .ts \"packages/*/src/**/*.ts\"",
     "lint:wotan": "wotan",
-    "lint": "npm run lint:ts",
+    "lint": "npm run lint:wotan && npm run lint:ts",
     "implemented_ccs": "ts-node maintenance/implemented_ccs.ts",
     "gh-cc-table": "npm run implemented_ccs -- --flavor=github --only-incomplete",
     "toLogEntryOverview": "ts-node packages/zwave-js/maintenance/checkCCToLogEntry.ts",
