--- a/.github/workflows/triage-new-issues.yml
+++ b/.github/workflows/triage-new-issues.yml
@@ -12,4 +12,4 @@ jobs:
         with:
           project: Triage
           column: Needs triage
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.AUTO_TRIAGE_TOKEN }}
