--- a/package.json
+++ b/package.json
@@ -108,10 +108,9 @@
     "toLogEntryOverview": "ts-node packages/zwave-js/maintenance/checkCCToLogEntry.ts",
     "usbdebug": "cmd.exe /c \"test\\usbdebug.bat\"",
     "commit": "git-cz",
-    "prerelease": "npm run build",
-    "release": "lerna version --no-commit-hooks",
+    "release": "npm run build && lerna version --no-commit-hooks",
     "preversion": "release-script --lerna-check",
-    "version": "rm package-lock.json && npm i && release-script --lerna",
+    "version": "yarn install && release-script --lerna",
     "postversion": "git push && git push --tags",
     "config": "ts-node maintenance/importConfig.ts",
     "docs": "docsify serve docs",
