--- a/.github/workflows/to-log-entry-overview.yml
+++ b/.github/workflows/to-log-entry-overview.yml
@@ -24,12 +24,15 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    # We need npm@7 for the workspaces feature
-    - name: Update npm to >=7
-      run: "[ $(npm -v | cut -d. -f1) -lt 7 ] && npm i -g npm@7"
+    # # We need npm@7 for the workspaces feature
+    # - name: Update npm to >=7
+    #   run: "[ $(npm -v | cut -d. -f1) -lt 7 ] && npm i -g npm@7"
+
+    # - name: Install dependencies
+    #   run: npm ci
 
     - name: Install dependencies
-      run: npm ci
+      run: rm -rf node_modules && yarn install --frozen-lockfile
 
     - name: Update overview
       uses: ./.github/actions/toLogEntry
