--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -43,8 +43,8 @@
   },
   "scripts": {
     "build": "tsc -b tsconfig.build.json",
-    "clean": "npm run build -- --clean",
-    "watch": "npm run build -- --watch --pretty",
+    "clean": "yarn run build -- --clean",
+    "watch": "yarn run build -- --watch --pretty",
     "lint:config": "gulp lintConfigFiles"
   }
 }
