--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,7 @@
 		"packages/*"
 	],
 	"useWorkspaces": true,
-	"version": "5.7.0",
+	"version": "6.0.0-alpha.0",
 	"command": {
 		"run": {
 			"stream": true
