feat: distinguish between stateful and notification-type values

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -100,5 +100,6 @@
 	],
 	"files.participants.timeout": 10000,
 	"typescript.preferences.importModuleSpecifier": "project-relative",
-	"jest.autoEnable": false
+	"jest.autoEnable": false,
+	"jest.runAllTestsFirst": false
 }
