--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "ts-morph": "^9.1.0",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.0-dev.20201117",
+    "typescript": "^4.1.3",
     "xml2json": "^0.12.0",
     "yargs": "^16.0.3"
   },
