fix(ci): don't trigger bot when comment is deleted [skip ci]

--- a/.github/workflows/zwave-js-bot.yml
+++ b/.github/workflows/zwave-js-bot.yml
@@ -2,7 +2,7 @@ name: Trigger Bot
 
 on:
   issue_comment:
-    types: [created, edited, deleted]
+    types: [created, edited] # deleted
 
 jobs:
   # Publish a PR build when an authorized person comments "@zwave-js-bot pack this"
