--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -56,6 +56,9 @@ jobs:
     - name: Lint config files
       run: npx lerna run lint:config
 
+    - name: Lint Z-Wave specifics
+      run: npx lerna run lint:zwave
+
   # ===================
 
   # Runs unit tests on all supported node versions and OSes
@@ -102,10 +105,48 @@ jobs:
       env:
         CI: true
 
-    # Test that the main entry point is not broken
+  # ===================
+
+  # Test that the generated packages are ok
+  test-package:
+    if: contains(github.event.head_commit.message, '[skip ci]') == false
+
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x]
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+
+    - name: Get Yarn cache directory
+      id: yarn-cache-dir-path
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+
+    - name: Use Yarn cache
+      uses: actions/cache@v2
+      id: yarn-cache
+      with:
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ matrix.node-version }}-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-yarn-
+
+    - name: Install dependencies
+      run: yarn install --prefer-offline --frozen-lockfile
+
+    # Do a full build so the package files are regenerated
+    - name: Compile TypeScript code
+      run: npx lerna run build:full
+
     - name: Import main entry point
       run: node -e 'require("./packages/zwave-js")'
-
 
   # ===================
 
@@ -172,7 +213,7 @@ jobs:
       github.event_name == 'push' &&
       startsWith(github.ref, 'refs/tags/v')
 
-    needs: [lint, unit-tests]
+    needs: [lint, unit-tests, test-package]
 
     runs-on: ubuntu-latest
     strategy:
@@ -218,7 +259,7 @@ jobs:
       run: yarn install --prefer-offline --frozen-lockfile
 
     - name: Create a clean build
-      run: npx lerna run build
+      run: npx lerna run build:full
 
     - name: Publish package to npm
       run: |
