--- a/packages/zwave-js/package.json
+++ b/packages/zwave-js/package.json
@@ -77,9 +77,11 @@
     "xstate": "^4.12.0"
   },
   "scripts": {
-    "build": "gulp build",
+    "build:full": "gulp build",
+    "build": "tsc -b tsconfig.build.json",
     "clean": "tsc -b tsconfig.build.json --clean",
     "prewatch": "gulp prebuild",
-    "watch": "tsc -b tsconfig.build.json --watch --pretty"
+    "watch": "tsc -b tsconfig.build.json --watch --pretty",
+    "lint:zwave": "gulp lint"
   }
 }
