--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -47,6 +47,17 @@ jobs:
     - name: Install dependencies
       run: yarn install --prefer-offline --frozen-lockfile
 
+    - name: Use TypeScript build cache
+      uses: actions/cache@v2
+      id: build-cache
+      with:
+        path: |
+          packages/*/build
+          packages/*/*.tsbuildinfo
+          packages/*/*.js
+        # When dependencies change, we like have to recompile. TS manages the sources itself
+        key: ts-${{ hashFiles('**/yarn.lock') }}
+
     - name: Compile TypeScript code
       run: yarn run build
     
@@ -95,6 +106,17 @@ jobs:
 
     - name: Install dependencies
       run: yarn install --prefer-offline --frozen-lockfile
+
+    - name: Use TypeScript build cache
+      uses: actions/cache@v2
+      id: build-cache
+      with:
+        path: |
+          packages/*/build
+          packages/*/*.tsbuildinfo
+          packages/*/*.js
+        # When dependencies change, we like have to recompile. TS manages the sources itself
+        key: ts-${{ hashFiles('**/yarn.lock') }}
 
     # Compilation is necessary, or the tests won't run
     - name: Compile TypeScript code
@@ -188,6 +210,17 @@ jobs:
 
     - name: Install dependencies
       run: yarn install --prefer-offline --frozen-lockfile
+
+    - name: Use TypeScript build cache
+      uses: actions/cache@v2
+      id: build-cache
+      with:
+        path: |
+          packages/*/build
+          packages/*/*.tsbuildinfo
+          packages/*/*.js
+        # When dependencies change, we like have to recompile. TS manages the sources itself
+        key: ts-${{ hashFiles('**/yarn.lock') }}
 
     # Compilation is necessary, or the tests won't run
     - name: Compile TypeScript code
