--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -54,7 +54,7 @@ jobs:
           packages/*/build
           packages/*/*.tsbuildinfo
           packages/*/*.js
-        # When dependencies change, we like have to recompile. TS manages the sources itself
+        # When dependencies change, we likely have to recompile. TS manages the sources itself
         key: ts-${{ hashFiles('**/yarn.lock') }}
 
     - name: Compile TypeScript code
