--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -55,7 +55,7 @@ jobs:
           packages/*/build
           packages/*/*.tsbuildinfo
           packages/*/*.js
-        # When dependencies change, we like have to recompile. TS manages the sources itself
+        # When dependencies change, we likely have to recompile. TS manages the sources itself
         key: ts-${{ hashFiles('**/yarn.lock') }}
 
     - name: Compile TypeScript code
@@ -115,7 +115,7 @@ jobs:
           packages/*/build
           packages/*/*.tsbuildinfo
           packages/*/*.js
-        # When dependencies change, we like have to recompile. TS manages the sources itself
+        # When dependencies change, we likely have to recompile. TS manages the sources itself
         key: ts-${{ hashFiles('**/yarn.lock') }}
 
     # Compilation is necessary, or the tests won't run
@@ -219,7 +219,7 @@ jobs:
           packages/*/build
           packages/*/*.tsbuildinfo
           packages/*/*.js
-        # When dependencies change, we like have to recompile. TS manages the sources itself
+        # When dependencies change, we likely have to recompile. TS manages the sources itself
         key: ts-${{ hashFiles('**/yarn.lock') }}
 
     # Compilation is necessary, or the tests won't run
