--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -30,18 +30,32 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Install yarn
-      run: npm i -g yarn
+    - name: Get Yarn cache directory
+      id: yarn-cache-dir-path
+      run: echo "::set-output name=dir::$(yarn cache dir)"
 
-    # # We need npm@7 for the workspaces feature
-    # - name: Update npm to >=7
-    #   run: "[ $(npm -v | cut -d. -f1) -lt 7 ] && npm i -g npm@7"
-
-    # - name: Install dependencies
-    #   run: npm ci
+    - name: Use Yarn cache
+      uses: actions/cache@v2
+      id: yarn-cache
+      with:
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ matrix.node-version }}-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-yarn-
 
     - name: Install dependencies
-      run: rm -rf node_modules && yarn install --frozen-lockfile
+      run: yarn install --prefer-offline --frozen-lockfile
+
+    - name: Use TypeScript build cache
+      uses: actions/cache@v2
+      id: build-cache
+      with:
+        path: |
+          packages/*/build
+          packages/*/*.tsbuildinfo
+          packages/*/*.js
+        # When dependencies change, we likely have to recompile. TS manages the sources itself
+        key: ts-${{ hashFiles('**/yarn.lock') }}
 
     - name: Compile TypeScript code
       run: yarn run build
