--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -47,6 +47,9 @@ jobs:
     - name: Install dependencies
       run: yarn install --prefer-offline --frozen-lockfile
 
+    - name: Compile TypeScript code
+      run: yarn run build
+
     - name: Lint TypeScript code
       run: yarn run lint
 
