--- a/.github/workflows/zwave-js-bot_pull.yml
+++ b/.github/workflows/zwave-js-bot_pull.yml
@@ -39,7 +39,7 @@ jobs:
       id: update-index
       run: |
         yarn run config import -i
-        git diff --name-only
+        git diff
 
         # Check if something changed
         if ! git diff --quiet ; then
