fix: don't react to edited comments

--- a/.github/workflows/zwave-js-bot_pull.yml
+++ b/.github/workflows/zwave-js-bot_pull.yml
@@ -39,6 +39,8 @@ jobs:
       id: update-index
       run: |
         yarn run config import -i
+
+        # This changed:
         git diff
 
         # Check if something changed
