--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -45,7 +45,6 @@
     "build": "tsc -b tsconfig.build.json",
     "clean": "yarn run build -- --clean",
     "watch": "yarn run build -- --watch --pretty",
-    "lint:config": "gulp lintConfigFiles",
-    "generateDeviceIndex": "gulp generateDeviceIndex"
+    "lint:config": "gulp lintConfigFiles"
   }
 }
