--- a/.github/workflows/zwave-js-bot_schedule.yml
+++ b/.github/workflows/zwave-js-bot_schedule.yml
@@ -2,8 +2,8 @@ name: 'Z-Wave Bot: Scheduled actions'
 
 on:
   schedule:
-    # every 15 minutes
-    - cron:  '*/15 * * * *'
+    # every 12 hours
+    - cron:  '0 */12 * * *'
 
 jobs:
   stale:
