feat: add compat flag to remove support of CCs

--- a/maintenance/schemas/device-config.json
+++ b/maintenance/schemas/device-config.json
@@ -228,6 +228,31 @@
 								}
 							},
 							"additionalProperties": false
+						},
+						"remove": {
+							"type": "object",
+							"patternProperties": {
+								"^(0x)?[0-9a-f]+$": {
+									"type": "object",
+									"properties": {
+										"endpoints": {
+											"anyOf": [
+												{ "const": "*" },
+												{
+													"type": "array",
+													"items": {
+														"type": "integer",
+														"minimum": 0
+													},
+													"minItems": 1
+												}
+											]
+										}
+									},
+									"additionalProperties": false
+								}
+							},
+							"additionalProperties": false
 						}
 					},
 					"additionalProperties": false
