--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/gulp": "^4.0.7",
     "@types/gulp-sourcemaps": "0.0.32",
     "@types/jest": "^26.0.14",
+    "@types/js-levenshtein": "^1.1.0",
     "@types/json5": "0.0.30",
     "@types/mockdate": "^2.0.0",
     "@types/node": "^14.11.2",
@@ -76,6 +77,7 @@
     "jest": "^26.4.2",
     "jest-circus": "^26.4.2",
     "jest-extended": "^0.11.5",
+    "js-levenshtein": "^1.1.6",
     "lerna": "^3.22.1",
     "mockdate": "^3.0.2",
     "prettier": "^2.1.2",
