--- a/.github/zwave-js-assistant.yml
+++ b/.github/zwave-js-assistant.yml
@@ -22,12 +22,15 @@ stale:
     - 'external'
     - 'wontfix'
     - 'working as intended ✔'
+    - 'waiting for info ⏳'
   # How long issues with these labels may stay open
   afterDays: 7
   # What to comment when an issue gets closed
   comment: |
     This issue hasn't seen any recent activity and was marked as "${label}".
     Closing for housekeeping purposes... 🧹
+    
+    Feel free to reopen if the issue persists.
 
 # Configure auto-labeling
 autoLabel:
